// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SwitchTrack 镜像测试 不可用的SwitchTrack 1`] = `
.c0 {
  width: 100%;
  height: 100%;
  opacity: 0.38;
  z-index: -1;
  -webkit-transition: opacity 150ms cubic-bezier(0.4,0.0,0.2,1) 0ms,background-color 150ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: opacity 150ms cubic-bezier(0.4,0.0,0.2,1) 0ms,background-color 150ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  border-radius: 7px;
  background-color: #000000;
  opacity: 0.12;
}

<span
  className="c0"
  disabled={true}
/>
`;

exports[`SwitchTrack 镜像测试 渲染 SwitchTrack 1`] = `
.c0 {
  width: 100%;
  height: 100%;
  opacity: 0.38;
  z-index: -1;
  -webkit-transition: opacity 150ms cubic-bezier(0.4,0.0,0.2,1) 0ms,background-color 150ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: opacity 150ms cubic-bezier(0.4,0.0,0.2,1) 0ms,background-color 150ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  border-radius: 7px;
  background-color: #000000;
}

<span
  className="c0"
/>
`;

exports[`SwitchTrack 镜像测试 选中状态的SwitchTrack 1`] = `
.c0 {
  width: 100%;
  height: 100%;
  opacity: 0.38;
  z-index: -1;
  -webkit-transition: opacity 150ms cubic-bezier(0.4,0.0,0.2,1) 0ms,background-color 150ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: opacity 150ms cubic-bezier(0.4,0.0,0.2,1) 0ms,background-color 150ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  border-radius: 7px;
  background-color: #000000;
  background-color: #00bcd4;
  opacity: 0.5;
}

<span
  checked={true}
  className="c0"
  color="info"
/>
`;
